Fixed overflow on table growing the height of the page based on number of rows hidden

--- a/client/scss/mod-custom.scss
+++ b/client/scss/mod-custom.scss
@@ -448,8 +448,6 @@ dt.govuk-summary-list-mod {
 }
 
 .fixTableHead { 
-  overflow-y: auto; 
-  max-height: 50rem;
 
   thead th { 
     position: sticky; 
@@ -458,6 +456,9 @@ dt.govuk-summary-list-mod {
   }
 
   table { 
+    display: block;
+    overflow-y: scroll; 
+    max-height: 50rem;
     border-collapse: collapse;         
     width: 100%; 
   }
